--- a/Develop/package.json
+++ b/Develop/package.json
@@ -15,5 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.7.14"
   }
 }
